@@ -1,3 +1,3 @@
-/^APR_/     { print "#if", $1 }
+/^(APR?_|defined)/     { print "#if", $1 }
 /^\t*apr?_/ { print "const void *ap_hack_" $1 " = (const void *)" $1 ";" }
-/^\/APR_/   { print "#endif /*", substr($1,2), "*/" }
+/^\/(APR?_|defined)/   { print "#endif /*", substr($1,2), "*/" }
