@@ -59,7 +59,6 @@
 #ifndef APACHE_UTIL_EBCDIC_H
 #define APACHE_UTIL_EBCDIC_H
 
-#ifdef CHARSET_EBCDIC
 
 #ifdef __cplusplus
 extern "C" {
@@ -72,6 +71,8 @@ extern "C" {
 /**
  * @package Utilities for EBCDIC conversion
  */
+
+#ifdef AP_CHARSET_EBCDIC
 
 /**
  * Setup all of the global translation handlers
@@ -99,11 +100,11 @@ void ap_xlate_proto_from_ascii(char *buffer, apr_size_t len);
 }
 #endif
 
-#else   /* CHARSET_EBCDIC */
+#else   /* AP_CHARSET_EBCDIC */
 
 #define ap_xlate_proto_to_ascii(x,y)          /* NOOP */
 #define ap_xlate_proto_from_ascii(x,y)        /* NOOP */
 
-#endif  /* CHARSET_EBCDIC */
+#endif  /* AP_CHARSET_EBCDIC */
     
 #endif  /* !APACHE_UTIL_EBCDIC_H */
