@@ -69,11 +69,11 @@
 #define SIZEFMT_BYTES 0
 #define SIZEFMT_KMG 1
 #define TMP_BUF_SIZE 1024
-#ifdef CHARSET_EBCDIC
+#ifdef AP_CHARSET_EBCDIC
 #define RAW_ASCII_CHAR(ch)  apr_xlate_conv_byte(ap_hdrs_from_ascii, (unsigned char)ch)
-#else /*CHARSET_EBCDIC*/
+#else /*AP_CHARSET_EBCDIC*/
 #define RAW_ASCII_CHAR(ch)  (ch)
-#endif /*CHARSET_EBCDIC*/
+#endif /*AP_CHARSET_EBCDIC*/
 
 module AP_MODULE_DECLARE_DATA includes_module;
 
